...
    <string name="unsaved_message">Unsaved Changes</string>
    <string name="notes">Notes</string>
    <string name="change_view_string">Change Views</string>
    <string name="save_string">Save</string>
    <string name="simple_view_string">Basic View</string>
    <string name="advanced_view_string">Advanced View</string>
    <string name="okay_exp">Okay!</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="img_default">Default</string>
    <string name="collection_completion_template">%1$d/%2$d"</string>
    <string name="collection_complete">Collection Complete!</string>
    <string name="select_collection_name">Select a new collection name</string>
    <string name="view">View</string>
    <string name="toggle_collected">Toggle Collected</string>
...
    <string name="search_hint">Search coins&#8230;</string>
    <string name="tutorial_search_feature">You can now search for coins in your collection! Tap the magnifying glass icon or tap Toggle Search in the three dots menu.</string>
    <string name="add_coin">Add Coin</string>

    <!-- Main Activity -->
    <string name="app_name">Coin Collection</string>
    <string name="create_new_collection">New Collection</string>
    <string name="intro_message">Thanks for downloading Coin Collection!\nTo get started, select \'New Collection\'</string>
    <string name="tutorial_more_options">Press and hold on a collection to view, edit, copy, and more!</string>
    <string name="delete_collection">Delete Collection</string>
    <string name="import_collection">Import Collection</string>
    <string name="export_collection">Export Collection</string>
    <string name="reorder_collection">Reorder Collections</string>
    <string name="rename_collection">Rename Collections</string>
    <string name="app_info">App Info</string>
    <string name="select_collection_delete">Select a collection to delete</string>
    <string name="collection_actions">Collection Actions</string>
    <string name="coin_actions">Coin Actions</string>
    <string name="copy_name_suffix">\ Copy</string>
...
    <!-- App Info -->
    <string name="info_name_version">Coin Collection v%1$s</string>
    <string name="info_github">github.com/anwilli5/coin-collection-android-US</string>
    <string name="info_overview">This App is meant to help you keep track of which coins you have already come across and saved in your collection. To help keep your collection organized, we recommend purchasing a coin album specific to each type of coin.\n\nThe mint marking on most coins can be found near the date that appears on the face of the coin. If no mint mark is present, it typically symb

    <!-- Coin Page Creator -->
    <string name="tutorial_select_coin_and_create">Select a coin type, choose a name and hit \'Create New Collection!\'</string>
    <string name="enter_collection_name">Enter Collection Name</string>
    <string name="show_mint_mark">Show the mint mark on the collection page</string>
    <string name="edit_date_range">Change the collection beginning and ending year</string>
    <string name="select_collection_type">Select Collection Type</string>
    <string name="basic_collections">Basic Collections</string>
    <string name="advanced_collections">Advanced Collections</string>
...
    <string name="include_states_quarters_proof">Include States Quarter Proofs</string>
    <string name="include_parks_quarters_proof">Include National Parks Quarter Proofs</string>
    <string name="include_women_quarters_proof">Include American Women Quarter Proofs</string>
    <string name="include_territories_quarters_proof">Include Proof quarters for D.C. and the U.S. Territories</string>
    <string name="include_semiq_coins">Include SemiQ Coins</string>

    <string name="create_page">Create New Collection!</string>
    <string name="update_page">Update Collection!</string>
    <string name="collection_type">Collection Type: </string>
    <string name="enter_start_year">Starting Year: </string>
    <string name="enter_stop_year">Ending Year: </string>
    <string name="creating_collection">Creating Collection…</string>
    <string name="deleting_collection">Deleting Collection…</string>
...
    <string name="filter_status_collected" tools:ignore="PluralsCandidate">Filter: %1$d of %2$d Collected</string>
    <string name="filter_status_missing" tools:ignore="PluralsCandidate">Filter: %1$d of %2$d Missing</string>

    <!-- Collection Page -->
    <string name="dialog_enter_collection_name">Please enter a name for the collection</string>
    <string name="dialog_enter_coin_name">Please enter a name for the coin</string>
    <string name="tutorial_add_to_and_lock_collection">Add a coin to your collection by clicking the space above its year or name.  Also, you can prevent accidental changes using the \'LOCK\' action</string>
    <string name="dialog_unsaved_changes_change_views">This collection has unsaved changes. Please save before changing views.</string>
    <string name="dialog_unsaved_changes_exit">Leaving this page will erase your unsaved changes, are you sure you want to exit?</string>
    <string name="collection_locked">Collection is currently locked, hit the \'Edit\' action to unlock</string>
    <string name="edit_coin_info">Edit coin details</string>
    <string name="name_label">Name:</string>
    <string name="mint_label">Mint:</string>
    <string name="image_label">Image:</string>
    <string name="tutorial_edit_copy_delete_coins">Press and hold on a coin image to edit, copy, or delete!</string>
    <string name="save_changes_first">This collection has unsaved changes. Please save changes before performing this action.</string>

    <!-- Error and Status Messages -->
    <string name="failed_mk_dir">Failed to make/find directory at %1$s</string>
    <string name="no_collections">No Collections Found</string>
    <string name="cannot_rd_ext_media_shared">External media cannot be read from. If plugged into a computer, try unplugging it</string>
...
