<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reorder_collections_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/unsaved_message_textview_reorder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/unsaved_message_background"
        android:gravity="center"
        android:text="@string/unsaved_message"
        android:textColor="@color/unsaved_message_text_color"
        android:textSize="14sp"
        android:visibility="gone" />
</FrameLayout>